# CRAcked

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  BACKUP.md  CLAUDE.md  DEVELOPERS_README.md  PACKAGING.md  README.md  RULES.md  package-lock.json  package.json  vitest.config.js
.github/workflows/: ci.yml  release.yml
packaging/: cracked.desktop
scripts/: check-rules-doc.sh  cracked.sh  fetch-rclone.sh  install-desktop.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  db.rs  fhsa.rs  lib.rs  main.rs  rrsp.rs  tfsa.rs
src-tauri/tests/: integration.rs
src/__tests__/: app.e2e.test.js  helpers.test.js
