[package]
name = "cracked"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cracked_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles SQLite from source so there's no system-library dependency.
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
# Embedded git (vendored libgit2) — no `git` binary needed on the user's machine.
# default-features off drops the network/https/ssh transports we don't use
# (backups reach Drive via rclone, not git push), keeping the C dep surface small.
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

